--- a/interface/pages/dashadmin.html
+++ b/interface/pages/dashadmin.html
@@ -106,10 +106,10 @@
       </div>
       <!-- /col-md-4 -->
       <div class="col-md-4 col-sm-4 mb">
-            <div class="weather pn">
+            <div  class="weather pn">
                     <i class="fa fa-cloud fa-4x"></i>
-                    <h2>11º C</h2>
-                    <h4>SÃO PAULO</h4>
+                    <div><h2 id="temperaturamin"></h2><h2 id="temperaturamax"></h2></div>
+                    <h4 id="weather-location"></h4>
                   </div>
       </div>
       <!-- /col-md-4 -->
