--- a/interface/pages/index.html
+++ b/interface/pages/index.html
@@ -116,15 +116,19 @@
   <script type="text/javascript" src="../lib/gritter-conf.js"></script>
   <!--common script for all pages-->
   <script src="../lib/common-scripts.js"></script>
+  <script src="../js/generic.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
+      var foto = localStorage.getItem("foto");
+      var nome = "Bem vindo " + localStorage.getItem("username");
+
       var unique_id = $.gritter.add({
         // (string | mandatory) the heading of the notification
-        title: 'Bem vindo ao Pilates App!',
+        title: nome,
         // (string | mandatory) the text inside the notification
-        text: 'Sistema de gerenciamento de aulas de Pilates.',
+        text: 'O Pilates App é um sistema de gerenciamento de aulas de Pilates.',
         // (string | optional) the image to display on the left
-        image: '../img/usuario.jpg',
+        image: foto,
         // (bool | optional) if you want it to fade out on its own or just sit there
         sticky: false,
         // (int | optional) the time you want it to be alive for before fading out
@@ -138,6 +142,7 @@
         context: document.body
       }).done(function(data) {
         $("#sidebar").html(data);
+        
       });
       
     $.ajax({
