--- a/interface/pages/menu.html
+++ b/interface/pages/menu.html
@@ -1,6 +1,6 @@
 <!-- sidebar menu start-->
 <ul class="sidebar-menu" id="nav-accordion">
-    <p class="centered"><a href="#"><img src="../img/usuario.jpg" class="img-circle" width="80"></a></p>
+    <p class="centered"><a href="#"><img id="foto" src="../img/usuario.jpg" class="img-circle" width="80"></a></p>
     <h5 id="username" class="centered">André Perretto de Andrade</h5>
     <li class="mt">
       <a class="active" href="../pages/index.html">
@@ -14,7 +14,7 @@
         <span>Administrador</span>
         </a>
       <ul class="sub">
-        <li><a href="#">Estúdios</a></li>
+        <li><a href="estudios.html">Estúdios</a></li>
         <li><a href="usuarios.html">Usuários</a></li>
       </ul>
     </li>
@@ -25,9 +25,9 @@
         </a>
       <ul class="sub">
         <li><a href="#">Alunos</a></li>
-        <li><a href="#">Planos</a></li>
-        <li><a href="#">Tipos de aulas</a></li>
         <li><a href="#">Professor</a></li>
+        <li><a href="planos.html">Planos</a></li>
+        <li><a href="tiposaulas.html">Tipos de aulas</a></li>
       </ul>
     </li>
     <li class="sub-menu">
@@ -123,3 +123,9 @@
   <script src="../lib/jquery.scrollTo.min.js"></script>
   <script src="../lib/jquery.nicescroll.js" type="text/javascript"></script>
   <script src="../lib/jquery.sparkline.js"></script>
+  <script src="../lib/common-scripts.js"></script>
+  <script type="text/javascript" src="../lib/gritter/js/jquery.gritter.js"></script>
+  <script type="text/javascript" src="../lib/gritter-conf.js"></script>
+  <script>
+    getuser();
+  </script>
