ajustes campos novos

--- a/interface/pages/planos.html
+++ b/interface/pages/planos.html
@@ -58,6 +58,10 @@
                       <div class="form-group col-md-2">
                           <label class="control-label">Aulas por mês</label>
                           <input type="number" class="form-control" name="nr_aulasmes" id="nr_aulasmes" placeholder="Aulas por mês">
+                      </div> 
+                      <div class="form-group col-md-2">
+                          <label class="control-label">Aulas por semana</label>
+                          <input type="number" class="form-control" name="nr_aulassemana" id="nr_aulassemana" placeholder="Aulas por semana">
                       </div>
 
                       <div class=" " >
