--- a/interface/pages/menuindex.html
+++ b/interface/pages/menuindex.html
@@ -31,7 +31,7 @@
           </ul>
         </li>
         <li class="sub-menu">
-            <a href="#">
+            <a href="calendario.html">
               <i class="fa fa-book"></i>
               <span>Calendário</span>
               </a>
