--- a/interface/pages/calendario.html
+++ b/interface/pages/calendario.html
@@ -176,7 +176,7 @@
                           <button onclick="novo()"  type="button" class="btn btn-primary">
                               <i class="fa fa-edit"></i>
                           </button>
-                          <button onclick="save('aulas')"  type="button" class="btn btn-success">
+                          <button onclick="saveCalendario('aulas')"  type="button" class="btn btn-success">
                               <i class="fa fa-save"></i>
                           </button>
                           <button  onclick="ondelete('aulas')"  type="button" class="btn btn-danger">
