--- a/interface/pages/calendario.html
+++ b/interface/pages/calendario.html
@@ -53,7 +53,7 @@
                     <label class=" form-control-label">Estúdio:</label>
                   </div>
                   <div class="">
-                    <select name="nm_estudio" id="nm_estudio" class="form-control">
+                    <select onchange="changeestudio()" name="nm_estudio" id="nm_estudio" class="form-control">
                       <option value="">Selecione</option>
                     </select>
                   </div>
