--- a/interface/pages/calendario.html
+++ b/interface/pages/calendario.html
@@ -245,7 +245,7 @@
 
         <div style="margin-left:2px" class="row">
           <div class="form-group col-md-12">
-              <button onclick="novo()"  type="button" class="btn btn-primary">
+              <button onclick="novoid('cadastrorapidocliente')"  type="button" class="btn btn-primary">
                   <i class="fa fa-edit"></i>
               </button>
               <button onclick='savemodal("alunos","cadastrorapidocliente", "[{\"to\":\"nm_nome\",\"from\": \"nm_alunos\"}]", "alunosaula")'  type="button" class="btn btn-success">
