--- a/interface/pages/calendario.html
+++ b/interface/pages/calendario.html
@@ -280,6 +280,8 @@
   <link rel="stylesheet" href="../css/to-do.css">
   <script src="../js/calendario.js" type="text/javascript"></script>
   <script src="../lib/jquery-ui/jquery-ui.min.js"></script>
+  
+  <script src="../node_modules/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
 </body>
 
 </html>
