--- a/interface/pages/aulas.html
+++ b/interface/pages/aulas.html
@@ -54,7 +54,7 @@
             <div id="rowform" class="form-panel">
               <h4 class="mb" style="padding-left:15px">Calendário</h4>
               
-                <div style="display:none" id="div_estudio" class="form-group col-md-3">
+                <div style="" id="div_estudio" class="form-group col-md-3">
                   <div class="col">
                     <label class=" form-control-label">Estúdio:</label>
                   </div>
@@ -64,6 +64,7 @@
                     </select>
                   </div>
                 </div>
+                <br>
                 <div id="calendar">
 
                 </div>
@@ -287,6 +288,7 @@
   <script src="../lib/jquery-ui/jquery-ui.min.js"></script>
   
   <script src="../node_modules/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
+  <script src="../js/aulas.js" type="text/javascript"></script>
 </body>
 
 </html>
