ajustes calendario aluno

--- a/interface/pages/planos.html
+++ b/interface/pages/planos.html
@@ -65,9 +65,9 @@
                       </div>
 
                       <div class=" " >
-                        <label class="control-label ">Créditos</label>
-                        <input onchange="checkchange(this)" style="width: 30px;height: 30px;" type="checkbox" class="form-control " name="sn_creditos" id="sn_creditos" placeholder="Créditos">
-                    </div>
+                        <label class="control-label ">Aula Experimental</label>
+                        <input onchange="checkchange(this)" style="width: 30px;height: 30px;" type="checkbox" class="form-control " name="sn_experimental" id="sn_experimental" placeholder="Créditos">
+                      </div>
 
                       <div class="form-group">
                           <label class="control-label col-md-12"  >Observações</label>
