--- a/interface/pages/estudios.html
+++ b/interface/pages/estudios.html
@@ -120,10 +120,14 @@
                     <div class="form-group col-md-3">
                         <label class="control-label">Celular</label>
                         <input type="celular" class="form-control" name="nm_celular" id="nm_celular" placeholder="Celular">
-                        </div>
-                    <div class="form-group col-md-4">
-                    <label class="control-label">Email</label>
-                    <input type="email" class="form-control" name="nm_email" id="nm_email" placeholder="Email">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label class="control-label">Email</label>
+                        <input type="email" class="form-control" name="nm_email" id="nm_email" placeholder="Email">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label class="control-label">Capacidade máxima</label>
+                        <input type="number" class="form-control" name="nr_maxima" id="nr_maxima" placeholder="Capacidade">
                     </div>
 
                     
