--- a/interface/pages/estudios.html
+++ b/interface/pages/estudios.html
@@ -355,6 +355,9 @@
                                 <button  title="Intervalo" onclick="intervalo()"  type="button" class="btn btn-primary"> 
                                     <i class="fa fa-asterisk"></i>
                                 </button>
+                                <button  title="Capacidade máxima por horario" onclick="capacidadeMaxima()"  type="button" class="btn btn-info"> 
+                                    <i class="fa fa-battery-full"></i>
+                                </button>
                             </div>
                         </div>
                   </form>
@@ -493,6 +496,127 @@
   </div>
   
 
+
+
+   
+<div id="modalcapacidade" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <h4 class="mb" style="padding-left:15px">Capacidade</h4>
+        <hr>
+        
+        <form id="capacidadeestudio">
+            <div class="form-group col-md-3">
+                <div class="col">
+                    <label class=" form-control-label">Dia da semana:</label>
+                </div>
+                <div class="">
+                    <select name="nm_dia" id="nm_dia" class="form-control">
+                          <option value="Segunda">Segunda</option>
+                          <option value="Terça">Terça</option>
+                          <option value="Quarta">Quarta</option>
+                          <option value="Quinta">Quinta</option>
+                          <option value="Sexta">Sexta</option>
+                          <option value="Sábado">Sábado</option>
+                          <option value="Domingo">Domingo</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group col-md-2">
+                <div class="col">
+                    <label class=" form-control-label">Horario de:</label>
+                </div>
+                <div class="">
+                    <select name="nm_horade" id="nm_horade" class="form-control">
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                        <option value="08">08</option>
+                        <option value="09">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="00">00</option>
+                    </select>
+                </div>
+            </div>
+  
+            
+            <div class="form-group col-md-2">
+                <div class="col">
+                    <label class=" form-control-label">Horario até:</label>
+                </div>
+                <div class="">
+                    <select name="nm_horaate" id="nm_horaate" class="form-control">
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                        <option value="08">08</option>
+                        <option value="09">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="00">00</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group col-md-3">
+                <label class="control-label">Capacidade máxima</label>
+                <input type="number" class="form-control" name="nr_maxima" id="nr_maxima" placeholder="Capacidade">
+            </div>
+
+            <input type="hidden" name="nm_estudio" id="nm_estudios" class="form-control">
+
+          <div style="margin-left:2px" class="row">
+            <div class="form-group col-md-12">
+                <button onclick='$(".modal").modal("hide")'  type="button" class="btn btn-primary">
+                    <i class="fa fa-long-arrow-left"></i>
+                </button>
+                <button onclick='savemodal("capacidade_estudios","capacidadeestudio", "", "")'  type="button" class="btn btn-success">
+                    <i class="fa fa-save"></i>
+                </button>
+            </div>
+        </div>
+        </form>
+        <hr>
+        <div id="conteudomodalcapacidade"></div>
+
+      </div>
+    </div>
+  </div>
+  
 
     <script src="../lib/jquery/jquery.min.js"></script>
     <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
