OK - Bloqueio em dia especifico 		OK - Verificar os créditos cadastrados no cadastro do aluno 		OK - Precisa repor as aulas até no máximo o final do plano

--- a/interface/pages/dashadmin.html
+++ b/interface/pages/dashadmin.html
@@ -234,7 +234,7 @@
                             break;                                          
                         }
                         html += "  <div class='title'>" + month + "</div> ";
-                        html += "  <div class='value tooltips' data-original-title='" + mes + "' data-toggle='tooltip' data-placement='top'>" + perc +  "%</div> ";
+                        html += "  <div class='value tooltips' title='" + mes + "' data-original-title='" + mes + "' data-toggle='tooltip' data-placement='top'>" + perc +  "%</div> ";
 
                         html += "</div>  ";                  
                       }
