- Na tela de Aluno, campo de desativação

--- a/interface/pages/alunos.html
+++ b/interface/pages/alunos.html
@@ -197,6 +197,11 @@
                                         placeholder="Quantidade de créditos">
                                 </div>
 
+                                <div class=" ">
+                                        <label class="control-label ">Desativar</label>
+                                        <input onchange="checkchange(this)" style="width: 30px;height: 30px;" type="checkbox" class="form-control " name="sn_desativar" id="sn_desativar" placeholder="Desativar Aluno">
+                                </div>
+
                                 <div class="col-md-12 cadaluno">
                                     <h4 class="mb" style="padding-left:15px">Dias e horarios das aulas</h4>
                                 </div>
