--- a/interface/pages/alunos.html
+++ b/interface/pages/alunos.html
@@ -209,9 +209,14 @@
                                     </div>
 
 
-                                <div class=" ">
+                                <div class="cadaluno ">
                                         <label class="control-label ">Desativar</label>
                                         <input onchange="checkchange(this)" style="width: 30px;height: 30px;" type="checkbox" class="form-control " name="sn_desativar" id="sn_desativar" placeholder="Desativar Aluno">
+                                </div>
+
+                                <div class="cadaluno ">
+                                        <label class="control-label ">Sem reposição</label>
+                                        <input onchange="checkchange(this)" style="width: 30px;height: 30px;" type="checkbox" class="form-control " name="sn_semreposicao" id="sn_semreposicao" placeholder="Sem reposição">
                                 </div>
 
                                 <div class="col-md-12 cadaluno">
