tela de envio de email

--- a/interface/pages/menuindex.html
+++ b/interface/pages/menuindex.html
@@ -16,6 +16,7 @@
           <ul class="sub">
             <li><a href="estudios.html">Estúdios</a></li>
             <li><a href="usuarios.html">Usuários</a></li>
+            <li><a href="configuracaoemail.html">Configuração de Email</a></li>
           </ul>
         </li>
         <li class="sub-menu">
