--- a/interface/pages/calendario.html
+++ b/interface/pages/calendario.html
@@ -161,8 +161,8 @@
                     </div>
                     
                     <div class="form-group">
-                      <label class="control-label col-md-12"  >Observações</label>
-                      <textarea type="text" class="form-control" id="nm_obs" name="nm_obs" placeholder="Observações"></textarea>
+                      <label class="control-label col-md-12"  >Conduta</label>
+                      <textarea type="text" class="form-control" id="nm_obs" name="nm_obs" placeholder="Conduta"></textarea>
                     </div>
 
                     
