--- a/interface/pages/alunos.html
+++ b/interface/pages/alunos.html
@@ -229,7 +229,7 @@
                                         <label class=" form-control-label">Dia de aula:</label>
                                     </div>
                                     <div class="">
-                                        <select name="nm_dia1" id="nm_dia1" class="form-control">
+                                        <select onblur="changeestudio()"  name="nm_dia1" id="nm_dia1" class="form-control">
                                             <option value="">Selecione</option>
                                             <option value="Segunda">Segunda</option>
                                             <option value="Terça">Terça</option>
@@ -319,7 +319,7 @@
                                         <label class=" form-control-label">Dia de aula:</label>
                                     </div>
                                     <div class="">
-                                        <select name="nm_dia2" id="nm_dia2" class="form-control">
+                                        <select onblur="changeestudio()"  name="nm_dia2" id="nm_dia2" class="form-control">
                                             <option value="">Selecione</option>
                                             <option value="Segunda">Segunda</option>
                                             <option value="Terça">Terça</option>
@@ -409,7 +409,7 @@
                                         <label class=" form-control-label">Dia de aula:</label>
                                     </div>
                                     <div class="">
-                                        <select name="nm_dia3" id="nm_dia3" class="form-control">
+                                        <select  onblur="changeestudio()" name="nm_dia3" id="nm_dia3" class="form-control">
                                             <option value="">Selecione</option>
                                             <option value="Segunda">Segunda</option>
                                             <option value="Terça">Terça</option>
@@ -499,7 +499,7 @@
                                         <label class=" form-control-label">Dia de aula:</label>
                                     </div>
                                     <div class="">
-                                        <select name="nm_dia4" id="nm_dia4" class="form-control">
+                                        <select onblur="changeestudio()"  name="nm_dia4" id="nm_dia4" class="form-control">
                                             <option value="">Selecione</option>
                                             <option value="Segunda">Segunda</option>
                                             <option value="Terça">Terça</option>
@@ -589,7 +589,7 @@
                                         <label class=" form-control-label">Dia de aula:</label>
                                     </div>
                                     <div class="">
-                                        <select name="nm_dia5" id="nm_dia5" class="form-control">
+                                        <select onblur="changeestudio()"  name="nm_dia5" id="nm_dia5" class="form-control">
                                             <option value="">Selecione</option>
                                             <option value="Segunda">Segunda</option>
                                             <option value="Terça">Terça</option>
@@ -679,7 +679,7 @@
                                         <label class=" form-control-label">Dia de aula:</label>
                                     </div>
                                     <div class="">
-                                        <select name="nm_dia6" id="nm_dia6" class="form-control">
+                                        <select onblur="changeestudio()"  name="nm_dia6" id="nm_dia6" class="form-control">
                                             <option value="">Selecione</option>
                                             <option value="Segunda">Segunda</option>
                                             <option value="Terça">Terça</option>
@@ -769,7 +769,7 @@
                                         <label class=" form-control-label">Dia de aula:</label>
                                     </div>
                                     <div class="">
-                                        <select name="nm_dia7" id="nm_dia7" class="form-control">
+                                        <select onblur="changeestudio()"  name="nm_dia7" id="nm_dia7" class="form-control">
                                             <option value="">Selecione</option>
                                             <option value="Segunda">Segunda</option>
                                             <option value="Terça">Terça</option>
