--- a/interface/pages/alunos.html
+++ b/interface/pages/alunos.html
@@ -1006,6 +1006,11 @@
                                     <input type="text" class="form-control" name="nm_qualobjetivo" id="nm_qualobjetivo" placeholder="Qual é o seu objetivo?">
                                 </div>
 
+                                <div style="display:none" class="form-group col-md-12 cadsaude">
+                                    <label class="control-label">Observações</label>
+                                    <textarea placeholder="Observações" id="nm_obs" name="nm_obs"  class="form-control"></textarea>
+                                </div>
+
                                 <div class="row">
                                     <div class="form-group col-md-12">
                                         <button id="novo" onclick="novo()" type="button" class="btn btn-primary">
