--- a/interface/pages/configuracaoemail.html
+++ b/interface/pages/configuracaoemail.html
@@ -56,7 +56,8 @@
                                 <option value="1">Aniversários</option>
                                 <option value="2">Cancelamento da aula</option>
                                 <option value="3">Primeiro cadastro</option>
-                                <option value="4">Final de plano</option>
+                                <option value="4">Recuperação de senha</option>
+                                <option value="5">Final de plano</option>
                             </select>
                         </div>
                     </div>
