--- a/interface/login.html
+++ b/interface/login.html
@@ -71,7 +71,7 @@
             <br>
             <br>
 
-          <button onclick="verificarAmbiente('Aluno')" class="btn btn-theme btn-block" href="index.html" type="button"><i class="fa fa-lock"></i> ENTRAR</button>
+          <button onclick="logar('aluno')" class="btn btn-theme btn-block" href="index.html" type="button"><i class="fa fa-lock"></i> ENTRAR</button>
           <hr>    
           
           <button onclick="verificarAmbiente('Admin')" class="col-md-6 btn btn-theme  " href="index.html" type="button">
